Opened 14 years ago
Closed 14 years ago
#7514 closed bug (fixed)
KDL while building cmake using prerelease-r1a3 on vmware
Reported by: | scottmc | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha3 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I got dropped to KDL while building cmake, screenshots attached.
Attachments (4)
Change History (10)
by , 14 years ago
Attachment: | r1a3-kdl2.png added |
---|
by , 14 years ago
Attachment: | r1a3-kdl1.png added |
---|
comment:1 by , 14 years ago
Milestone: | R1 → R1/alpha3 |
---|
comment:2 by , 14 years ago
Component: | - General → System/Kernel |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:3 by , 14 years ago
Owner: | changed from | to
---|
Ironically just today Axel mentioned some similar issue when copying files. I would blame cache_io() lines 770ff. After looking up the page satisfy_cache_io()
is called, which calls write_to_file()
or write_to_cache()
, which in turn unlock the cache. While the cache is not locked, anything can happen to that page. In particular -- as I guess happened in this case -- it can be freed by someone else.
Attaching possible solution.
by , 14 years ago
Attachment: | cache_io-re-lookup-after-satisfy_cache_io.diff added |
---|
patch: cache_io(): look up the page again after satisfy_cache_io()
comment:4 by , 14 years ago
patch: | 0 → 1 |
---|
by , 14 years ago
Attachment: | 2011-05-17_22-12-14_364.jpg added |
---|
This looks to be a related kdl, this time on real hardware, but also using pre-r1a3
comment:5 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | assigned → in-progress |
Yep, the KDL in 2011-05-17_22-12-14_364.jpg could be explained similarly.
Will apply my change. It shouldn't do any harm at least.
comment:6 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Applied in hrev41564. Hopefully fixes the issue.
Looks like a VM problem...is it reproducible?