cache_io(): Since satisfy_cache_io() (respectively the function it calls) unlocks the cache, we have to look up the page again, since someone else could have removed it in the meantime. Possibly fixes #7514.

+r1alpha3


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41564 a95241bf-73f2-0310-859d-f6bbb57e9c96